Add first attempts at finding symobolic representation of a more complex set of user behaviors

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-flask
 featuretools
+flask
+flask-Migrate
+flask-SQLAlchemy
+gplearn
+jupyterlab
+lightgbm
 pandas
+seaborn
 sklearn
 xgboost
-lightfm
-flask-SQLAlchemy
-flask-Migrate
-jupyterlab
